# void_compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  a.out  arrays.void  coverage.sh  debug_lexer.cpp  format.sh  lint.sh  main.cxx  main.void  test_print.void  test_var_expr.void
examples/: boolean_clean.void  boolean_demo.void  const_strings.void  do_showcase.void  expression_inference.void  function_pointers.void  functions.ll  functions.void  simple_inference.void  sized_integers_demo.void  sized_integers_simple.void  type_inference.void
include/: code_generation.h  compiler.h  lexer.h  parse_error.h  parser.h  runtime.h  types.h
src/: code_generation.cxx  compiler.cxx  lexer.cxx  main.cxx  parser.cxx  runtime.cxx
tests/: CMakeLists.txt  code_generation_test.cpp  integration_test.cpp  lexer_test.cpp  parser_test.cpp  slice_tests.cpp  test_main.cpp
